<resources>
    <string name="app_name">ClassifiedBar</string>
    <string name="hint_username">UserName</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phoneno">Phone</string>
    <string name="hint_confirmpassword">ConfirmPassword</string>
    <string name="age_condition">I am confirming here that I am above age of 21 and legally eligible to join this membership and doing payment.</string>
    <string name="terms_condition"><![CDATA[Accept Terms & Conditions.]]></string>
    <string name="SignUp_Error">SignUp Error</string>
    <string name="please_enter_name">Please Enter  UserName</string>
    <string name="membership_plan">My Exclusive Membership for Whisky Private Club</string>
    <string name="membership_amt"> $500</string>
    <string name="ownitnow">Own it Now</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_valid_email_id">Please enter valid Email-id.</string>
    <string name="please_enter_phoneno">Please Enter PhoneNo</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_cnfrmpassword">Please Enter ConfirmPassword</string>
    <string name="password_cnfrmpassword_doesnotmatch">Password and ConfirmationPassword do not match.</string>
    <string name="please_select_agecondition">Please check AgeCondition.</string>
    <string name="please_select_termscondition">Please check Terms and Condition.</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="not_connected_to_internet">It seems you are not connected to internet.</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="strcontinue">Continue</string>
    <string name="cardholdername">Card Holder\'s Name</string>
    <string name="address_line">Address Line</string>
    <string name="menu">Menu</string>
    <string name="profile">My Profile</string>
    <string name="reservation">Reservation</string>
    <string name="events">Events</string>
    <string name="specialoffers">Special Offers</string>
    <string name="home">Home</string>
    <string name="lastseen">LAST SEEN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myagentid">My Agent ID</string>
    <string name="membership">Membership</string>
    <string name="payment">Payment</string>
    <string name="cardstr">Credit/Debit/ATM Card</string>
    <string name="mycart">My Cart</string>
    <string name="remove">Remove</string>
    <string name="qrcode">QRCode</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="clublocation">Club Location</string>
    <!--<string name="show_my_secret_code">Show My Sceret Code</string>
    <string name="favourite_drink">Favourite Drink</string>
    <string name="last_visit">Last Visit</string>-->
    <string name="app_error">Oops Error</string>
    <string name="sorry_empty_data">Sorry! Empty Data</string>
    <string name="secretCode">SECRET CODE</string>
    <string name="ID">ID</string>
    <string name="specialoffertext">My Exclusive Membership for Whiskey Star Club</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="Login_Error">Login Error</string>
    <string name="sorry_invalid_user_name_email">Sorry! Invalid user name or email</string>
    <string name="sorry_could_not_process">Sorry! Could not process your request</string>
    <string name="sorry_user_loggedin_otherdevice">Sorry! User is logged-in with other device</string>
    <string name="Please_Enter_Valid_Email_Id">Please enter valid Email-id.</string>
    <string name="enjoy_your">Enjoy your</string>
    <string name="mood">Mood...</string>
    <string name="secretagent">Secret Agent</string>
    <string name="vip">VIP</string>
    <string name="reserve">Reserve</string>
    <string name="status">Status:</string>
    <string name="usualorder">Usual Order:</string>
    <string name="dob">DOB:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="no_of_persons">No of People at your table</string>
    <string name="select_time">Select Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="what_do_u_want_to_drink">Enter any special request here.</string>
    <string name="specialofferdummy">Premium Blended Malt from Classified Distllers.\nCo-founders of classified John Dhay has been recrating his grandfather\'s whiskyrcipes since 1995.lastly marked
    the 110 year anniversary of the final page entry in the collar book.\nLimited edition , Volume : 80 cl/Ac.\nEnjoy the complemntry whisky glass.
   Premium Blended Malt from Classified Distllers.\nCo-founders of classified John Dhay has been recrating his grandfather\'s whiskyrcipes since 1995.lastly marked
    the 110 year anniversary of the final page entry in the collar book.\nLimited edition , Volume : 80 cl/Ac.\nEnjoy the complemntry whisky glass. </string>
    <string name="eventdetaildummy">In true expalnatory spirit (geit)\n
    we will be tasting our way across the \nglobe sampling eight drams from \nsome of the worlds finest whisky\nproducers,travelling irelands,
    Scotland,Japan,Taiwan,India,America and China.</string>
    <string name="acknowlegment">Acknowlegement</string>
    <string name="interested">Interested</string>
    <string name="notinterested">Not Interested</string>
    <string name="rsvp">RSVP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="agent_status">AGENT STATUS</string>
    <string name="agentreservationstatus">RESERVATION STATUS</string>
    <string name="door_knock">Door Knock.</string>
    <string name="forgot_password_link">We will sent you a forgot  link to your registered email.</string>
    <string name="forgot">Forgot</string>
    <string name="back_to_login">Back to Login</string>
    <string name="was_observed_at">"was recently observed at "</string>
    <string name="its">***it\'s</string>
    <string name="ForgotPassword_Error">Forgot Password Error</string>
    <string name="ForgotPassword_Success_Message">An Email has successfully sent</string>
    <string name="profile_events">Events:</string>
    <string name="profile_offers">Offers:</string>
    <string name="favorite_drink">MY FAVOURITE MIXOLOGY</string>
    <string name="where_is_this_place">Where is this place</string>
    <string name="purchase_history">Purchase History</string>
    <string name="logout">Logout</string>
    <string name="event_a">Event Attending</string>
    <string name="submit">Submit</string>
    <string name="profile_update">Profile Updated</string>
    <string name="profile_image_update">Profile Image Updated</string>
    <string name="profile_update_successfully">Profile has been updated successfully</string>
    <string name="profile_image_update_successfully">Profile Image has been updated successfully</string>
    <string name="swipe_down_to_buy">Click to Buy</string>
    <string name="swipe_to_confirm">Swipe to Confirm</string>
    <string name="reserve_your_experience">Reserve Your Experience</string>
    <string name="event_error">Events</string>
    <string name="login_error">Login Error</string>
    <string name="registration_error">Registration Error</string>
    <string name="please_login">Your Session is expired. Please Login Again.</string>
    <string name="sorry_empty_events">No UpComing Events.</string>
    <string name="event_attending">Event Attending</string>
    <string name="no_events_attended">You have not attended any events.</string>
    <string name="Slow_Network_connection">Slow Network connection Error.</string>
    <string name="special_error">Special Offer Error</string>
    <string name="no_special_offers">No Upcoming Special Offers.</string>
    <string name="no_purchase_history">You have not Purchased any offers.</string>
    <string name="no_reservation_history">There is No Reservation History records exists.</string>
    <string name="no_scan_log">There is No Scan Log records exists.</string>
    <string name="reserve_Error">Reserve Error</string>
    <string name="please_enter_what_u_want_to_eat">Please enter what you want to eat</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_no_of_people">Please select number of people</string>
    <string name="Error_from_Server">Error from Server.</string>
    <string name="google_maps_key">AIzaSyBdFXRdQC6HeTXecu7ek22YuvWajVuJ9kM</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="take_picture">Take Picture</string>
    <string name="not_register">It seems that you are not registered on the Stripe payment gateway so Either you register with the Stripe Payment Gateway or contact Classified Administrator.</string>
    <string name="take_picture_description">Camera picture for sample app</string>
    <string name="ok_button_title">OK</string>
    <string name="reserve_title">Reservation Time</string>
    <string name="reservation_time"><br>User can do reservation on the following day with specific time\n\n
      </br><br>5:00 PM - 11:00 PM (Fri and Sat)\n
      </br><br>5:00 PM-9:00 PM Sunday\n
      </br><br>5:00 PM-10 PM Thursday\n
      </br><br>Nothing on Monday to Wednesday
      </br>
   </string>

</resources>