<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/signupheader_layout"
            layout="@layout/main_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/radiobtn_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupheader_layout"
            android:layout_margin="10dp"
            android:alpha="0.8">

            <RadioButton
                android:id="@+id/card_radiobtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/themecolor"
                android:checked="true"
                android:enabled="true"
                android:text="@string/cardstr"
                android:textColor="@color/white"
                android:fontFamily="@font/archivonarrow_regular"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>


        <EditText
            android:id="@+id/tv_cardholdername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/cardholdername"
            android:textColorHint="@color/black"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/archivonarrow_regular"
            app:layout_constraintTop_toBottomOf="@id/radiobtn_linear" />

        <com.stripe.android.view.CardInputWidget
            android:id="@+id/cardMultiLineInputWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cardholdername"
            app:shouldShowPostalCode="false"
            android:theme="@style/AppTheme.CardTheme"/>


        <android.widget.Button
            android:id="@+id/continueButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_bg"
            android:text="@string/strcontinue"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/archivonarrow_regular"
            app:layout_constraintTop_toBottomOf="@id/cardMultiLineInputWidget" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>