<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".landing.ui.ForgotPasswordActivity"
        android:fitsSystemWindows="true"
        android:background="@drawable/loginbg">

        <include
            android:id="@+id/forgotheader"
            layout="@layout/forgotpassword_header"
            app:layout_constraintTop_toBottomOf="@id/header_verticalguide1"
            app:layout_constraintBottom_toTopOf="@id/header_verticalguide2"

            />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/archivonarrow_regular"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_forgot_guide2"
            app:layout_constraintStart_toStartOf="@id/tv_forgot_guide1"
            app:layout_constraintTop_toBottomOf="@id/forgotheader"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/usernameedittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha=".8"
            android:background="@drawable/loginedittext_bg"
            android:fontFamily="@font/archivonarrow_regular"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toStartOf="@id/ed_end_guide"
            app:layout_constraintStart_toStartOf="@id/ed_startguide"
            app:layout_constraintTop_toBottomOf="@id/username_guideline1"
            app:layout_constraintBottom_toTopOf="@+id/username_guideline2"
            />

        <android.widget.Button
            android:id="@+id/forgot_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/forgotpasswordbuttonbg"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:fontFamily="@font/archivonarrow_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/ed_end_guide"
            app:layout_constraintStart_toStartOf="@id/ed_startguide"
            app:layout_constraintTop_toBottomOf="@id/forgotbtn_guideline1"
            app:layout_constraintBottom_toTopOf="@id/forgotbtn_guideline2"
            />


        <TextView
           android:id="@+id/tv_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivonarrow_regular"
            android:text="@string/forgot_password_link"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ed_startguide"
            app:layout_constraintTop_toBottomOf="@id/forgot_button"

            />

        <android.widget.Button
            android:id="@+id/back_to_login_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/backtologinbuttonbg"
            android:padding="5dp"
            android:text="@string/back_to_login"
            android:textAllCaps="false"
            android:fontFamily="@font/archivonarrow_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/ed_end_guide"
            app:layout_constraintStart_toStartOf="@id/ed_startguide"
            app:layout_constraintTop_toBottomOf="@id/back_to_loginbtn_guideline1"
            app:layout_constraintBottom_toTopOf="@id/back_to_loginbtn_guideline2"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/its_classified"
            app:layout_constraintBottom_toTopOf="@id/classified_guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/classified_guideline1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/classified_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/classified_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/back_to_loginbtn_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/back_to_loginbtn_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/forgotbtn_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/forgotbtn_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/username_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/username_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ed_startguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ed_end_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tv_forgot_guide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tv_forgot_guide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header_verticalguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header_verticalguide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
